--- a/canon-80d-esp8266/platformio.ini
+++ b/canon-80d-esp8266/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
+[env:nodemcuv2]
 platform = espressif8266
-board = esp12e
+board = nodemcuv2
 framework = arduino
